src/tests/ci/assignment_2_types_variables/valid/07_increment_decrement.c
int main() {
    int x = 5;
    x++;
    ++x;
    x--;
    --x;
    return x;
}
